Fixed collapsible collapsing when trigger looses focus.

--- a/docroot/themes/contrib/civic/civic-library/components/00-base/_variables.components.scss
+++ b/docroot/themes/contrib/civic/civic-library/components/00-base/_variables.components.scss
@@ -1142,6 +1142,7 @@ $civic-slide-dark-summary-color: civic-color-neutral(60) !default;
 //
 // Dropdown filter.
 //
+$civic-dropdown-filter-zindex: 9;
 $civic-dropdown-filter-light-filter-text-color: civic-color('secondary') !default;
 $civic-dropdown-filter-light-filter-text-icon-color: civic-color('primary') !default;
 $civic-dropdown-filter-light-filter-options-background-color: civic-color('neutral') !default;
